[workspace]
resolver = "2"
members = ["aoc-2015-01-1", "aoc-2015-01-2", "aoc-2015-02-1", "aoc-2015-02-2", "aoc-2015-03-1", "aoc-2015-03-2", "aoc-2015-04-1", "aoc-2015-04-2", "aoc-2015-05-1", "aoc-2015-05-2", "aoc-2015-06-1", "aoc-2015-06-2", "aoc-2015-07-1", "aoc-2015-08-1", "aoc-2015-09-1", "aoc-2015-10-1", "aoc-2015-11-1", "aoc-2015-12-1", "aoc-2015-12-2"]

[profile.release]
strip = "none"
lto = true
codegen-units = 1
panic = "abort"
